<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.stimednp.roommvvm.ui.mess_home.MessHomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_mess_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_home_month_summary"
            app:destination="@id/navigation_home_month_summary" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_edit_meal"
            app:destination="@id/navigation_edit_meal" />
    </fragment>
    <fragment
        android:id="@+id/navigation_home_month_summary"
        android:name="com.stimednp.roommvvm.ui.mess_home.MonthSummeryFragment"
        android:label="@string/title_month_summary"
        tools:layout="@layout/fragment_month_summery" >
        <action
            android:id="@+id/action_navigation_home_month_summary_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/navigation_edit_meal"
        android:name="com.stimednp.roommvvm.ui.EditMeals.EditMealsFragments"
        android:label="@string/title_edit_meal"
        tools:layout="@layout/fragment_edit_meals_fragments" >
        <action
            android:id="@+id/action_navigation_edit_meal_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.stimednp.roommvvm.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.stimednp.roommvvm.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>